--- a/Chapter5.tex
+++ b/Chapter5.tex
@@ -24,8 +24,8 @@ For example:
 \index{math function!sin()}
 
 \begin{verbatim}
-   double e = exp (1.0);
-   double height = radius * sin (angle);
+    double e = exp(1.0);
+    double height = radius * sin(angle);
 \end{verbatim}
 %
 But so far all the functions we have written have been {\bf void}
@@ -34,8 +34,8 @@ a void function, it is typically on a line by itself, with
 no assignment -- there is nothing to store as no result was produced:
 
 \begin{verbatim}
-   printLines (3);
-   countdown (n-1);
+   printLines(3);
+   countdown(n - 1);
 \end{verbatim}
 %
 In this chapter, we will create functions that produce results, or ``fruit,'' 
@@ -50,12 +50,15 @@ given radius:
 \index{pi}
 
 \begin{verbatim}
-  double area (double radius) 
-  {
-      double pi = acos (-1.0); 
-      double area = pi * radius * radius;
-      return area;
-  }
+
+    double area (double radius) 
+    {
+        double pi = acos(-1.0); 
+        double area = pi * radius * radius;
+        
+        return area;
+    }
+    
 \end{verbatim}
 %
 The first thing you should notice is that the beginning of the
@@ -78,7 +81,7 @@ let the compiler know the type of the parameters and return value of our functio
 The prototype for this function would be:
 
 \begin{verbatim}
-	double area (double ) ;
+	double area(double);
 \end{verbatim}
 %
 
@@ -87,10 +90,12 @@ expression you provide can be arbitrarily complicated, but it must yield only on
 We could have written this function more concisely, but ultimately we only return one value:
 
 \begin{verbatim}
-	double area (double radius) 
-	{
-		return acos(-1.0) * radius * radius;
-	}
+
+    double area(double radius) 
+    {
+    	return acos(-1.0) * radius * radius;
+    }
+    
 \end{verbatim}
 %
 
@@ -112,17 +117,19 @@ uses local variables to store return results.
 We use multiple return statements in this absolute value example:
 
 \begin{verbatim}
-  double absoluteValue (double x) 
-  {
-      if (x < 0) 
-      {
-          return -x;
-      } 
-      else 
-      {
-          return x;
-      }
-  }
+
+    double absoluteValue(double x) 
+    {
+        if (x < 0) 
+        {
+            return -x;
+        } 
+        else 
+        {
+            return x;
+        }
+    }
+  
 \end{verbatim}
 %
 Since these returns statements are in an alternative conditional, only
@@ -133,25 +140,27 @@ subsequent statements. This can be used to exit a function when
 we know there is no point in executing the remaining code:
 
 \begin{verbatim}
+
 	/*
-	this function returns 0 if either 
+	This function returns 0 if either 
 	x or y are negative otherwise it returns
 	their product
 	*/
-  double earlyReturnExample (double x) 
-  {
-	if (x < 0)   //gaurd from x being negative
-	{
-		return 0;
-	} 
+    double earlyReturnExample(double x) 
+    {
+        if (x < 0) // Guard from x being negative
+        {
+            return 0;
+        } 
 
-   	if (y < 0)   //gaurd from y being negative
-   {
-   	   return 0;
-   } 
+        if (y < 0) // Guard from y being negative
+        {
+            return 0;
+        } 
 
 	return x * y;
 }
+
 \end{verbatim}
 %
 
@@ -166,17 +175,18 @@ you have to guarantee that {\em every possible path} through
 the program hits a return statement.  For example:
 
 \begin{verbatim}
-  double AbsoluteValue (double x) 
-  {
-      if (x < 0) 
-      {
-           return -x;
-      } 
-      else if (x > 0) 
-      {
-          return x;
-      }                          /* WRONG!! */
-}
+    double AbsoluteValue(double x) 
+    {
+        if (x < 0) 
+        {
+            return -x;
+        } 
+        else if (x > 0) 
+        {
+            return x;
+        }
+        /* WRONG!! */
+    }
 \end{verbatim}
 %
 This program is not correct because if {\tt x} happens to be 0, then
@@ -251,10 +261,12 @@ distance, which will have type {\tt double}.
 Already we can write an outline of the function:
 
 \begin{verbatim}
-  double distance (double x1, double y1, double x2, double y2) 
-  {
-      return 0.0;
-  }
+
+    double distance(double x1, double y1, double x2, double y2) 
+    {
+        return 0.0;
+    }
+    
 \end{verbatim}
 %
 The {\tt return} statement is a placekeeper so that the function will
@@ -267,8 +279,8 @@ In order to test the new function, we have to call it with
 sample values.  Somewhere in {\tt main()} I would add:
 
 \begin{verbatim}
-  double dist = distance (1.0, 2.0, 4.0, 6.0);
-  printf  ("%f\n" dist);
+    double dist = distance(1.0, 2.0, 4.0, 6.0);
+    printf("%f\n" dist);
 \end{verbatim}
 %
 I chose these values so that the horizontal
@@ -289,14 +301,17 @@ $x_2 - x_1$ and $y_2 - y_1$.  I will store those values in
 temporary variables named {\tt dx} and {\tt dy}.
 
 \begin{verbatim}
-  double distance (double x1, double y1, double x2, double y2) 
-  {
-      double dx = x2 - x1;
-      double dy = y2 - y1;
-      printf  ("dx is %f\n",  dx);
-      printf  ("dy is %f\n", dy;
-      return 0.0;
-  }
+
+    double distance(double x1, double y1, double x2, double y2) 
+    {
+        double dx = x2 - x1;
+        double dy = y2 - y1;
+        printf("dx is %f\n", dx);
+        printf("dy is %f\n", dy;
+        
+        return 0.0;
+    }
+    
 \end{verbatim}
 %
 I added output statements that will let me check the intermediate
@@ -316,14 +331,17 @@ We could use the {\tt pow()} function, but it is simpler and
 faster to just multiply each term by itself.
 
 \begin{verbatim}
-  double Distance (double x1, double y1, double x2, double y2)
-  {
-      double dx = x2 - x1;
-      double dy = y2 - y1;
-      double dsquared = dx*dx + dy*dy;
-      printf  ("d_squared is %f\n", dsquared);
-      return 0.0;
-  }
+
+    double Distance(double x1, double y1, double x2, double y2)
+    {
+        double dx = x2 - x1;
+        double dy = y2 - y1;
+        double dsquared = dx * dx + dy * dy;
+        printf("dsquared is %f\n", dsquared);
+        
+        return 0.0;
+    }
+    
 \end{verbatim}
 %
 Again, I would compile and run the program at this stage
@@ -333,14 +351,17 @@ Finally, we can use the {\tt sqrt()} function to compute and
 return the result.
 
 \begin{verbatim}
-  double distance (double x1, double y1, double x2, double y2) 
-  {
-      double dx = x2 - x1;
-      double dy = y2 - y1;
-      double dsquared = dx*dx + dy*dy;
-      double result = sqrt (dsquared);
-      return result;
-  }
+
+    double distance(double x1, double y1, double x2, double y2) 
+    {
+        double dx = x2 - x1;
+        double dy = y2 - y1;
+        double dsquared = dx * dx + dy * dy;
+        double result = sqrt(dsquared);
+        
+        return result;
+    }
+    
 \end{verbatim}
 %
 Then in {\tt main()}, we should output and check the value of the result.
@@ -384,26 +405,29 @@ is the distance between the two points.  Fortunately, we have
 a function, {\tt Distance()}, that does that.
 
 \begin{verbatim}
-  double radius = distance (xc, yc, xp, yp);
+  double radius = distance(xc, yc, xp, yp);
 \end{verbatim}
 %
 The second step is to find the area of a circle with that
 radius, and return it.
 
 \begin{verbatim}
-  double result = area (radius);
+  double result = area(radius);
   return result;
 \end{verbatim}
 %
 Wrapping that all up in a function, we get:
 
 \begin{verbatim}
-  double areaFromPoints (double xc, double yc, double xp, double yp) 
-  {
-      double radius = distance (xc, yc, xp, yp);
-      double result = area (radius);
-      return result;
-  } 
+
+    double areaFromPoints(double xc, double yc, double xp, double yp) 
+    {
+        double radius = distance(xc, yc, xp, yp);
+        double result = area(radius);
+        
+        return result;
+    } 
+    
 \end{verbatim}
 %
 
@@ -414,10 +438,12 @@ working we can make it more concise by composing
 the function calls, but we should always favor readability over conciseness:
 
 \begin{verbatim}
-  double areaFromPoints (double xc, double yc, double xp, double yp) 
-  {
-      return area (dstance (xc, yc, xp, yp));
-  } 
+
+    double areaFromPoints(double xc, double yc, double xp, double yp) 
+    {
+        return area(distance(xc, yc, xp, yp));
+    }
+     
 \end{verbatim}
 
 
@@ -446,10 +472,12 @@ Also, the result of a comparison operator is a boolean value.
 For example:
 
 \begin{verbatim}
-  if (x == 5) 
-  {
-    /* do something*/
-  }
+
+    if (x == 5) 
+    {
+        /* Do something */
+    }
+    
 \end{verbatim}
 %
 The operator {\tt ==} compares two integers and produces a
@@ -464,13 +492,15 @@ using C preprocessor definitions anywhere a boolean expression is called for.
 For example, 
 
 \begin{verbatim}
-  #define FALSE 0
-  #define TRUE 1
-   ...
-  if (TRUE) 
-  {
-    /* will be always executed  */
-  }
+
+    #define FALSE 0
+    #define TRUE 1
+     ...
+    if (TRUE) 
+    {
+        /* Will be always executed  */
+    }
+    
 \end{verbatim}
 %
 %todo: Loop?
@@ -486,12 +516,14 @@ Instead, programmers typically use the {\tt short} datatype in combination with
 preprocessor definitions to store truth values.
 
 \begin{verbatim}
-  #define FALSE 0
-  #define TRUE 1
-   ...
-  short fred;
-  fred = TRUE;
-  short testResult = FALSE;
+
+    #define FALSE 0
+    #define TRUE 1
+     ...
+    short fred;
+    fred = TRUE;
+    short testResult = FALSE;
+    
 \end{verbatim}
 %
 The first line is a simple variable declaration;
@@ -506,17 +538,17 @@ As I mentioned, the result of a comparison operator is a boolean,
 so you can store it in a variable
 
 \begin{verbatim}
-  short evenFlag = (n%2 == 0);     /* true if n is even */
-  short positiveFlag = (x > 0);    /* true if x is positive */
+    short evenFlag = (n % 2 == 0);     /* true if n is even */
+    short positiveFlag = (x > 0);    /* true if x is positive */
 \end{verbatim}
 %
 and then use it as part of a conditional statement later
 
 \begin{verbatim}
-  if (evenFlag) 
-  {
-      printf("n was even when I checked it");
-  }
+    if (evenFlag) 
+    {
+        printf("n was even when I checked it\n");
+    }
 \end{verbatim}
 %
 A variable used in this way is called a {\bf flag},
@@ -551,13 +583,15 @@ conditional statements.  For example, how would you write
 the following code using a single conditional?
 
 \begin{verbatim}
-  if (x > 0) 
-  {
-      if (x < 10) 
-      {
-          printf ("x is a positive single digit.\n");
-      }
-  }
+
+    if (x > 0) 
+    {
+        if (x < 10) 
+        {
+            printf("x is a positive single digit.\n");
+        }
+    }
+    
 \end{verbatim}
 
 \section{Bool functions}
@@ -571,7 +605,8 @@ is especially convenient for hiding complicated tests inside
 functions.  For example:
 
 \begin{verbatim}
-    int IsSingleDigit (int x)
+
+    int IsSingleDigit(int x)
     {
         if (x >= 0 && x < 10) 
         {
@@ -582,6 +617,7 @@ functions.  For example:
             return FALSE;
         }
     }
+    
 \end{verbatim}
 %
 The name of this function is {\tt isSingleDigit()}.  It is common
@@ -598,17 +634,19 @@ is evaluated to a {\tt boolean} value, so there is nothing wrong with returning 
 directly, and avoiding the {\tt if} statement altogether:
 
 \begin{verbatim}
-    int iSingleDigit (int x)
+
+    int iSingleDigit(int x)
     {
         return (x >= 0 && x < 10);
     }
+    
 \end{verbatim}
 %
 In {\tt main()} you can call this function in the usual ways:
 
 \begin{verbatim}
-    printf("%i\n", isSingleDigit (2));
-    short bigFlag = !isSingleDigit (17);
+    printf("%i\n", isSingleDigit(2));
+    short bigFlag = !isSingleDigit(17);
 \end{verbatim}
 %
 The first line outputs the value {\tt true} because 2 is a
@@ -625,8 +663,9 @@ The most common use of boolean functions is inside conditional
 statements
 
 \begin{verbatim}
-	//very readable with the bool funciton - if is single digit
-    if (isSingleDigit (x))  
+
+    // Very readable with the bool funciton - if is single digit
+    if (isSingleDigit(x))  
     {
         printf("x is little\n");
     } 
@@ -634,6 +673,7 @@ statements
     {
         printf("x is big\n");
     }
+    
 \end{verbatim}
 
 \section {Returning from {\tt main()}}
@@ -643,7 +683,7 @@ return value of the {\tt main()} function.
 It's supposed to return an integer:
 
 \begin{verbatim}
-  int main (void)
+  int main(void)
 \end{verbatim}
 
 The usual return value from {\tt main()} is 0, which indicates that
@@ -661,11 +701,13 @@ We can use these to return a descriptive result from our return statement.
 
 
 \begin{verbatim}
+
     #include <stdlib.h>
     int main (void)
     {
-        return EXIT_SUCCESS;   /*program terminated successfully*/
-    }  
+        return EXIT_SUCCESS; /* Program terminated successfully*/
+    }
+    
 \end{verbatim}
 %
 
